<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/bg_main"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="@dimen/logo_dimens"
        android:layout_height="@dimen/logo_dimens"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            style="@style/SideMargin"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:focusableInTouchMode="true"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            style="@style/SideMargin"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/sign_up"
        android:textColor="@color/text_color"
        android:layout_marginTop="20dp"
        style="@style/SideMargin"/>

    <Button
        android:id="@+id/forgot_pass_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/existing"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"/>



</LinearLayout>